...
    <string name="youtube_video_id">d9ZrzAQRyg8</string>

    <string name="menu_title">Menu</string>

    <!-- Landing page strings -->
    <string name="newcastle_logo">Newcastle University Logo</string>
    <string name="welcome_text">Welcome!</string>
    <string name="open_day_button">Open Day</string>
    <string name="post_app_day_button">Post Application Visit Day</string>

    <!-- FAQ strings -->
    <string name="faqTitle">Frequently Asked Questions</string>

...
    - Chats with existing students and academic staff over coffee and cake\n
    - Tours of the School’s facilities
    </string>


    <!--Tours Strings -->
    <string name="preset_tour">Take a tour!</string>
    <string name="open_floor_plan">View Floor Plan</string>
    <string name="floor_plan_picture">Picture of the Floor Plan</string>
    <string name="floor_info">Information relative to the floor being currently viewed</string>
    <string name="next_step">Next Step</string>
    <string name="playbtn">Play Video</string>

    <!-- Self guided tour menu -->
    <string name="self_guided_title">Self Guided Tour</string>
    <string name="preset_tour_button">Follow a pre-set walking tour</string>
    <string name="own_pace_button">Discover at your own pace</string>

    <!--Text For Pre-Config Tour-->

    <!-- Titles -->
    <string name="welcome_title">Welcome!</string>
    <string name="buildings_title">Surrounding Buildings</string>
    <string name="design_title">Design of the USB</string>
    <string name="history_title">History of the School</string>
    <string name="atrium_title">The Atrium</string>
    <string name="openlab_title">Open Lab / Lectures</string>
    <string name="staff_title">TIG / Staff</string>
    <string name="flatfloor_title">Flat Floor Teaching</string>
    <string name="terrace_title">The Terrace</string>
    <string name="research_title">Research Groups</string>

    <!-- Images -->
    <string name="decision_room_image">Image of the decision theatre</string>
    <string name="eat_urban_image">Image of the cafeteria within the USB</string>
    <string name="fredrick_douglass_image">Image of the fredrick douglass building</string>
    <string name="nida_building_image">Image of the National Innovation Center for Data and Ageing</string>
...
        Ale which is now brewed in the Netherlands .
    </string>

    <string name="helix">You may think we are working and studying on a building site, but the "Helix" is
        an exciting new development with buildings either side of us providing lecture space and
        big data opportunities for our students.</string>
    <string name="frederick_douglass_title">The Frederick Douglass Centre</string>
    <string name="frederick_douglass">Designed to offer multi-use space for outreach and teaching events, it houses an auditorium
        that can hold 750 people, and can hold 200 more in a collaborative lecture theatre.</string>
    <string name="NIC_title">The National Innovation Centre for Data and Ageing</string>
        <string name="NIC">This building houses 2 research centres intended to enable businesses to work closely with
        researchers in order to develop new technology around the use of data and helping society
        to deal with the consequences of ageing.</string>
...
        of computer science in the UK and was one of the first to award both undergraduate and
        postgraduate degrees. In 2019 we celebrate 50 years since the first graduation from an
        undergraduate programme.\n\n
       The display next to reception shows some of our oldest computers and those we have used
        throughout our 60 year history.
    </string>
    <string name="reception">The Building Reception</string>

    <string name="ground_floor_sub_title">Ground Floor Facilities</string>
    <string name="ground_floor">
        There is the Cyber Physical Systems Laboratory, This lab focuses on systems that combine
        hardware, software, networking and control. It is developing integrated systems for
        transport, smart grids, building infrastructure etc.\n\n
        There is the Decision Theatre, this
        is an iInteractive 3D facility linked to the Urban Observatory that provides companies,
...
    <string name="university_stops">University</string>
    <string name="accomodation_stops">Accommodation</string>

    <array name="pre_config_tour"></array>

    <!-- Nav Bar Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>

