...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".NavigationBar">


        <TextView
            android:id="@+id/titleText"
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/helvetica_family"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_horizontal"
            />

        <Button
            android:id="@+id/welcome_btn"
            style="@style/ButtonStyle"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/shield_wrapper"
            android:paddingStart="25dp"
            android:paddingEnd="30dp"
...
            android:onClick="tourClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <Button
            android:id="@+id/buildings_btn"
            style="@style/ButtonStyle"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/shield_wrapper"
            android:paddingStart="25dp"
            android:paddingEnd="30dp"
...
            android:onClick="tourClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_btn" />

        <Button
            android:id="@+id/design_btn"
            style="@style/ButtonStyle"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/shield_wrapper"
            android:paddingStart="25dp"
            android:paddingEnd="30dp"
...
            android:onClick="tourClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buildings_btn" />

        <Button
            android:id="@+id/history_btn"
            style="@style/ButtonStyle"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/shield_wrapper"
            android:paddingStart="25dp"
            android:paddingEnd="30dp"
...
            android:onClick="tourClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/design_btn" />

        <Button
            android:id="@+id/atrium_btn"
            style="@style/ButtonStyle"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/shield_wrapper"
            android:paddingStart="25dp"
            android:paddingEnd="30dp"
...
            android:onClick="tourClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/history_btn" />

        <Button
            android:id="@+id/openlab_btn"
            style="@style/ButtonStyle"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/shield_wrapper"
            android:paddingStart="25dp"
            android:paddingEnd="30dp"
...
            android:onClick="tourClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/atrium_btn" />

        <Button
            android:id="@+id/staff_btn"
            style="@style/ButtonStyle"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/shield_wrapper"
            android:paddingStart="25dp"
            android:paddingEnd="30dp"
...
            android:onClick="tourClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/openlab_btn" />

        <Button
            android:id="@+id/flatfloor_btn"
            style="@style/ButtonStyle"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/shield_wrapper"
            android:paddingStart="25dp"
            android:paddingEnd="30dp"
...
            android:onClick="tourClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/staff_btn" />

        <Button
            android:id="@+id/terrace_btn"
            style="@style/ButtonStyle"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/shield_wrapper"
            android:paddingStart="25dp"
            android:paddingEnd="30dp"
            android:text="@string/terrace_title"
            android:onClick="tourClick"
            app:layout_constraintBottom_toTopOf="@+id/research_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flatfloor_btn" />

        <Button
            android:id="@+id/research_btn"
...
